hphp/test/zend/bad/argument_restriction_005.php
<?php
class Sub implements ArrayAccess {
	public function offsetSet() {
	}	
}
?>